# chaveta-sdks

./: README.md  buf.gen.yaml
.github/workflows/: publish-sdk-c-cpp.yml  publish-sdk-go.yml  publish-sdk-python.yml  publish-sdk-rust.yml  publish-sdk-ts.yml
c/: Makefile
c/include/robolytics/: client.h
c/src/: client.c
cpp/: CMakeLists.txt
cpp/include/robolytics/: client.hpp
cpp/src/: client.cpp
go/: client.go  go.mod
python/: pyproject.toml
python/robolytics/: __init__.py
rust/: Cargo.toml  build.rs
rust/src/: client.rs  gen.rs  lib.rs
